[Signin][Android] Add tests for SigninManager.runAfterOperationInProgress

This CL is a follow-up to https://crrev.com/c/1345069, which added
isOperationInProgress and runAfterOperationInProgress methods to
SigninManager. This CL modifies SigninManager to make it testable (by
making some methods non-static and adding a constructor with explicit
dependencies) and adds tests for the new methods.

Bug: 903657, 903658, 906188, 906193, 906788
Change-Id: Iba91ca038898d7abd015b4ab194bc26edbe34479
Reviewed-on: https://chromium-review.googlesource.com/c/1350908
Commit-Queue: Boris Sazonov <bsazonov@chromium.org>
Reviewed-by: Mihai Sardarescu <msarda@chromium.org>
Cr-Commit-Position: refs/heads/master@{#614673}
Former-commit-id: 958e6783640e39cc1f5aa49cd17e21037e4bbb31